# ShadowNotes

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/lottie/: shadownotes_loading.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/home/controllers/: home_controller.dart
lib/src/home/models/: note_model.dart
lib/src/home/views/: home_view.dart  note_editor_view.dart  notes_view.dart
lib/src/home/widgets/: wave_painter.dart
lib/src/notes/controller/: note_controller.dart  note_editor_controller.dart
lib/src/notes/views/: note_editor_view.dart  notes_view.dart
lib/src/onboarding/controllers/: onboarding_controller.dart  setup_name_controller.dart
lib/src/onboarding/views/: onboarding_views.dart  (+1 more)
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: encryption.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_shadow_notes.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_shadow_notes.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+11 files in other folders)
