[package]
name = "rust_lib_shadow_notes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.8.0"
blake3 = "1.5"
chacha20poly1305 = "0.10"
getrandom = "0.3.1"
rand = "0.9.0"
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
